--- a/test.tex
+++ b/test.tex
@@ -439,10 +439,10 @@ This is a dramatic geometrical confirmation (Fig. 6) for the visible Universe â€
 \begin{figure}[h]
 \centering
 \includegraphics[width=5cm,height=6cm]{./figures/triaxis.png}
-\caption{Geo-dimensional Universe-Grandcosmos couple, with unit length the Electron Compton reduced wavelength. In a 3D Super-space, natural logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius, and for mass ratio $M^{\prime}$ byrespect to the electron mass. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving $e$ and $a$ reach precision $10^{-7}$.} 
+\caption \textit{Geo-dimensional Universe-Grandcosmos couple}, with unit length the Electron Compton reduced wavelength. In a 3D Super-space, logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius, and for mass ratio $M^{\prime}/m_e$. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving $e$ and $a$ reach precision $10^{-7}$.} 
 \end{figure}
 
-Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$), from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, were the equations are intractable. However, it is largely ignored in other domains because there is not really mathematical foundation, apart the above essential remarks. The triplet $c, G, \hbar$ which define the above Planck units is a notable exception. However, there is no standard interpretation for the Plack mass, except the fact it appears above (Eq. 7) and in Biology \cite{Sanchez1}. 
+Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$), from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, were the equations are intractable. However, it is largely ignored in other domains because there is not really mathematical foundation, apart the above essential remarks. The triplet $c, G, \hbar$ which define the above Planck units is a notable exception. However, there is no standard interpretation for the Planck mass, except the fact it appears above (Eq. 7) and in Biology \cite{Sanchez1}. 
 
 Indeed, in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
 neglect Prospective Dimensional Analysis. 
@@ -477,7 +477,7 @@ This idea of $\rho_{c}$ being a fundamental constant permits to define $R$ witho
 radius of the sphere containing a critical mass. This justifies the above application of the Bekenstein-Hawking entropy. 
 
 Opponents would say that the
-center of a black hole presents a singularity: that is indeed the casefor the topon in the above flickering Space-
+center of a black hole presents a singularity: that is indeed the case for the topon in the above flickering Space-
 Mass-Time hypothesis. Other will argue that the flying galaxies cannot reach the celerity $c$ at
 horizon, but, as recalled above, Relativity is a local theory, so do not apply to cosmology at large.
 Indeed, even General Relativity in unable to define what is a Galilean frame, while the Foucault
@@ -497,7 +497,7 @@ One would conceive it as the periodic time of a Super-cycle, which matches the T
 the holic dimension (see section 6), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
-where $O_{M}$, the cardinal order of the Monster Group, have been detected in the Section 2.3.1, again in relation with the Kotov period. Eliminating the later, this introduces the above $t_M$ chronon :
+where $O_{M}$, the cardinal order of the Monster Group, have been detected in the section 4.2, again in relation with the Kotov period. Eliminating the later, this introduces the above $t_M$ chronon :
 \begin{equation}
 T/t_M \approx (3/e\sqrt{2})O_M^3
 \end{equation}
@@ -523,31 +523,30 @@ In the hypothesis of an Arithmetical Cosmos, the ultimate equations must be diop
 simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are 
 co-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, showing the classical 6D phase-space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
 
-\textit{'This is the degenerate arithmetic form of the spatio-temporal holographic principle}.
+\textit{This is the degenerate arithmetic form of the spatio-temporal holographic principle}.
 
 This is also the third Kepler's law, but its diophantine form gives $L = n^{2}$, the orbit law in the Hydrogen atom and in our
-Gravitational Molecule model, where the visible Universe corresponds to the first orbital. this suggests at once the existence of a Grandcosmos. this is also confirmed by the overall symmetry of the Topological Axis does also, which, moreover, favors the
+Gravitational Molecule model, where the visible Universe corresponds to the first orbital. This suggests at once the existence of a Grandcosmos. This is also induced by the overall symmetry of the Topological Axis, which, moreover, favors the
 dimension n = 30, the natural extension of the above diophantine equation:
 \begin{equation}
 T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
 where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the $5^{th}$ power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which gauge bosons are deduced by Bott reductions [19] (Fig. 1)
 
-This is called the Holic Principle, butlimted to the apparent MLT world. The Complete Holic
+This is called the Holic Principle, but limted to the apparent MLT world. The Complete Holic
 Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
 $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
-with the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
+with the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm: $\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The special holographic relations}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-The holographic technique is by far the most efficient way to treat huge information \cite{Grosmann}, based on the
-properties of a coherent wave. Now, the main lesson of modern physics is that everything (light \textit{and matter}) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been confirmed (section 4.1).
+The holographic technique, based on the properties of a coherent wave is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been confirmed (section 4.2).
 
-The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam on an area of about one squared meter. The emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^15$ bit,  obtained in 12 minutes of exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations was indeed found, and its arithmetical form, the Holic Principle was exposed at ANPA 16 (Cambridge) \cite{Sanchez4}. In sep. 1997, the Orsay University attributes a sabbatical year, giving time to the first author to reexaminre the foundation of cosmology, and, in three minutes, to deduce the half-radius of visible Universe. after several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university, this was put in March 1998 in a closed draft in the Academie des  Sciences de Paris with the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
+The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photosensible emulsion of $0.6 m^2$. The emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^15$ bit,  obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge) \cite{Sanchez4}. In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexaminre the foundation of cosmology. In three minutes, the first author deduces the half-radius of visible Universe. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university, this was put in March 1998 in a closed draft in the Acad\'{e}emie des Sciences de Paris with the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
 
-Strangely enough, at the same epoch when the first author was blocked (1990-1995), a Holographic Principle has been coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One can think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975). In fact, the standard Holographic Principle is limted to the Plank area. Thus, it is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
+Strangely enough, at the same epoch when the first author's publication was blocked (1993-1995), a Holographic Principle has been coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal holography was proposed in the author's thesisas soon as 1975. Moreover, the standard Holographic Principle is limited to using the Plank area. Thus, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more examples. 
 
 \subsection{The Conservation of Information}
 
