--- a/test.tex
+++ b/test.tex
@@ -439,7 +439,9 @@ This is a dramatic geometrical confirmation (Fig. 6) for the visible Universe â€
 \begin{figure}[h]
 \centering
 \includegraphics[width=5cm,height=6cm]{./figures/triaxis.png}
-\caption \textit{Geo-dimensional Universe-Grandcosmos couple}, with unit length the Electron Compton reduced wavelength. In a 3D Super-space, logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius, and for mass ratio $M^{\prime}/m_e$. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving $e$ and $a$ reach precision $10^{-7}$.} 
+\caption \textit{Geo-dimensional Universe-Grandcosmos couple}, with unit length the Electron Compton reduced wavelength. In a 3D Super-space, logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections canonical values.
+%a common ratio, that of the Hubble radius, and for mass ratio $M^{\prime}/m_e$.
+$M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving $e$ and $a$ reach precision $10^{-7}$.} 
 \end{figure}
 
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$), from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, were the equations are intractable. However, it is largely ignored in other domains because there is not really mathematical foundation, apart the above essential remarks. The triplet $c, G, \hbar$ which define the above Planck units is a notable exception. However, there is no standard interpretation for the Planck mass, except the fact it appears above (Eq. 7) and in Biology \cite{Sanchez1}. 
