--- a/test.tex
+++ b/test.tex
@@ -1094,7 +1094,7 @@ The high precision of relations prove that the traditional scientific thinking i
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
 high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with far lesser precision, background temperature, must be saluted as decisive achievements.
 
-In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Atiya1}: -extit{`Nobody has
+In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Atiyah1}: -extit{`Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if $a$ were not 137.035999...}` This is a definite
 rejection of the Multiverse Hypothesis.
@@ -1175,7 +1175,9 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 \item 2/ The CMB temperature will appear invariant. 
 \item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce massive gluons and composite quark down.
 \item 4/ Informatics software should be boosted by the principle of multi-base computation.
-\item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
+\item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
+\item 6/ In pure mathematics the study of canonical generators $\sqrt{n}+\sqrt{(n+1)}$, especially the Planck-Fermat's one $1+\sqrt2$ will define $a$.
+\item 7/ The Monster group will be connected to the pariah groups, especially the Janko one.
 \end{itemize}
 
 
