--- a/test.tex
+++ b/test.tex
@@ -1176,7 +1176,7 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 \item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce massive gluons and composite quark down.
 \item 4/ Informatics software should be boosted by the principle of multi-base computation.
 \item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
-\item 6/ In pure mathematics the study of canonical generators $\sqrt{n}+\sqrt{(n+1)}$, especially the Planck-Fermat's one $1+\sqrt2$ will define $a$.
+\item 6/ The Lucas-Lehmer series, in connection with the the canonical generators $\sqrt{n}+\sqrt{(n+1)}$, especially the Planck-Fermat's one $1+\sqrt2$ will define $a$.
 \item 7/ The Monster group will be connected to the pariah groups, especially the Janko one.
 \end{itemize}
 
