--- a/test.tex
+++ b/test.tex
@@ -326,7 +326,7 @@ The Kotov non-Doppler cosmic oscillation \cite{Kotov1} is not considered serious
 \begin{equation}
 t_{K} / t_{e} = (a_{G} a_{w})^{1/2}
 \end{equation}
-This weak coupling constant \cite{Carr} $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
+This weak coupling constant \cite{Carr} $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy\cite{Tanabashi}: 
 $
 E_{F} \approx 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}
 $, itself tied to the weak force constant 
@@ -1170,13 +1170,13 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}.
 
 It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 
-      This article leads to some predictions:
+      This article leads to many predictions, in particular:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
 \item 2/ The CMB temperature will appear invariant. 
 \item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce massive gluons and composite quark down.
 \item 4/ Informatics software should be boosted by the principle of multi-base computation.
 \item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
-\item 6/ The Lucas-Lehmer series, in connection with the the canonical generators $\sqrt{n}+\sqrt{(n+1)}$, especially the Planck-Fermat's one $1+\sqrt2$ will define $a$.
+\item 6/ The Lucas-Lehmer series, in connection with the the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
 \item 7/ The Monster group will be connected to the pariah groups, especially the Janko one.
 \end{itemize}
 
