--- a/test.tex
+++ b/test.tex
@@ -125,7 +125,7 @@ Contents
    
 ~~~    9.3. The Archimedes constant $\pi$ as a calculation base
    
-~~~    9.4. The Four Forces Unification in ppb fine-tuning
+~~~    9.4. The Four Forces Connection in ppb fine-tuning
    
 ~~~    9.5. The heavy leptons fine-tuning
    
