--- a/test.tex
+++ b/test.tex
@@ -58,7 +58,7 @@ $^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Unification with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. Based on the imperfect cosmological principle, the standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. Based on the imperfect cosmological principle, the standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -888,28 +888,28 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {The Four Forces Unification in ppb Fine-Tuning}
-The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearly that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was admitted to be:
+\subsection {The Four Forces Connection in ppb Fine-Tuning}
+The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearly that GUT with $1O^{16}$ GeV gauge boson seems confirmed. Moreoverer, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was defined in section 2.4 by the two first terms of the \textit {ppb range holic series}:
 \begin{equation}
-p_G = \sqrt{pH} (p/H)^3/d_e
+(H/p)^7 = (H/p_G d_e)^2 \approx (p_{moy}/p_K)^3 \approx (p/p_{00})^{210}
 \end{equation}
- With the Atiyah constant $\Gamma = \gamma a/\pi$ is (section 8.2), we first noted that, inside the 250 ppb indetermination:  
+where $p_K$ is the Koyde-Sanchez constant (section 9.5), $p_{moy}^3 = n p_a p_E$, whith the neutron/electron mass ratio $n \approx 1838.68366089(17)$, $p_a = (4\pi )^2 \sqrt{a}$ and $p_E = 1847.599459$, the Eddington's value.  
+The holic resolving term is the Lenz-Wyler form $p_{00} = 6\pi_0^5$, where $\pi_0$ has the fractional development: 3;7;16;($sqrt{s}+1$).
+ With the Atiyah constant $\Gamma = \gamma a/\pi$ is (section 8.2), inside the 250 ppb indetermination:  
  $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$
- which affects the form of the simplest diophantine equation (section 6).
  Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. Thus:    
 \begin{equation}
 \lambdabar/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
-leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$
-This relation is so striking that we ask the computer if it can find synthetic precise relations involving the other forces parameters, in function of $\pi$ and $\Gamma$. Indeed, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$, the computer gives the following relation in the ppb range:
+leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$. Moreover, with the following definition of the Bizouard strong force parameter $f$:
 \begin{equation}
-aF/\sqrt(pH) \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
+aF/\sqrt(pH) = 2\pi afpH/F \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
 \end{equation}
 where $\mu$ is the Muon/Electron mass ratio, \textit{inside its 20 ppb indetermination}, so proposing the value:
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation}
-Note that $n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
+Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
 development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
 incomplete and that Nature uses rational approximations of $\pi$}.
@@ -922,10 +922,7 @@ Now, as was recalled above, the exponents represent the number of
 dimensions. So, this represents a dimensional reduction, eliminating 137, from 9D and 6D to
 3D, which could be associated with the super-string theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
-Note that the strong force parameter $f$ is represented by the Bizouard formula:
-\begin{equation}
-F/\sqrt(pH) \approx 2\pi fpH/F
-\end{equation}
+
 The following weak boson ratios $W$ and $Z$ match (Eq.1):
 $R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
 \textit{in the ppb range}. For the charged boson: 
@@ -940,19 +937,19 @@ confirming the holic attribution (section 6) of power 7 for a field parameter, a
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-This value is confirmed (30 ppb), with the above tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1):
+This value is confirmed (30 ppb), with the above tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1) (3\%, 1\%, 60 ppb) 
 \begin{equation}
-Q \approx 48 O_M Z
+Q \approx P^e \approx X^{\sqrt a} \approx 48 \sqrt{5/w} O_M Z
 \end{equation}
-the Z value is also confirmed by its ppb liaison with the Janko pariah group $J_3$ \cite{Janko}
+the Z value is also confirmed by its ppb liaison with the Janko pariah group order $J_3 = 50232960 $ \cite{Janko}
 \begin{equation}
 J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
-This enligths a liaison between the monster and the $J_3$ cardinals, while these two groups have no known relations:
+This enligths a liaison between the monster and the $J_3$ orderss, while these two groups have no known relations (0.2 ppm):
 \begin{equation}
 O_M \approx d_e J_3^7 \sqrt(p/p_0)
 \end{equation}
-\textit{The very existence of so precise ppb relations confirms there exists a Final Theory involvoing the sporadic groups}. The following section indicates additive hints.
+\textit{The very existence of so precise ppb relations confirms there exists a Final Theory involving the sporadic groups}. The following section indicates additive hints.
 
 
 \subsection {The heavy leptons fine-tuning}
@@ -1176,7 +1173,7 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 \item 4/ Informatics software should be boosted by the principle of multi-base computation.
 \item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way.
 \item 6/ The Lucas-Lehmer series, in connection with the the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
-\item 7/ The Monster group will be connected to the pariah groups, especially the Janko one.
+\item 7/ The Monster group will be connected to the pariah groups, especially the Janko one $J_3$.
 \end{itemize}
 
 
