--- a/test.tex
+++ b/test.tex
@@ -894,12 +894,11 @@ The Particle standard model achieved the unification between electromagnetism an
 (H/p)^7 = (H/p_G d_e)^2 \approx (p_{moy}/p_K)^3 \approx (p/p_{00})^{210}
 \end{equation}
 where $p_K$ is the Koyde-Sanchez constant (section 9.5), $p_{moy}^3 = n p_a p_E$, whith the neutron/electron mass ratio $n \approx 1838.68366089(17)$, $p_a = (4\pi )^2 \sqrt{a}$ and $p_E = 1847.599459$, the Eddington's value.  
-The holic resolving term is the Lenz-Wyler form $p_{00} = 6\pi_0^5$, where $\pi_0$ has the fractional development: 3;7;16;($sqrt{s}+1$).
- With the Atiyah constant $\Gamma = \gamma a/\pi$ is (section 8.2), inside the 250 ppb indetermination:  
- $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$
- Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. Thus:    
+The holic resolving term is the Lenz-Wyler form $p_{00} = 6\pi_0^5$, where $\pi_0$ has the fractional development: 3;7;16;($\sqrt{s}+1$).
+ With the Atiyah constant $\Gamma = \gamma a/\pi$ (section 8.2), inside the 250 ppb indetermination:  
+ $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$. Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. Thus:    
 \begin{equation}
-\lambdabar/l_{eF} \approx 137 \times 2\Gamma
+\lambdabar_e/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
 leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$. Moreover, with the following definition of the Bizouard strong force parameter $f$:
 \begin{equation}
@@ -939,13 +938,13 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
 This value is confirmed (30 ppb), with the above tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1) (3\%, 1\%, 60 ppb) 
 \begin{equation}
-Q \approx P^e \approx X^{\sqrt a} \approx 48 \sqrt{5/w} O_M Z
+Q \approx P^e \approx W^{\sqrt a} \approx 48 \sqrt{5/w}~ O_M Z
 \end{equation}
 the Z value is also confirmed by its ppb liaison with the Janko pariah group order $J_3 = 50232960 $ \cite{Janko}
 \begin{equation}
 J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
-This enligths a liaison between the monster and the $J_3$ orderss, while these two groups have no known relations (0.2 ppm):
+There is a liaison between the monster and the $J_3$ orders, while these two groups have no known relations (0.2 ppm):
 \begin{equation}
 O_M \approx d_e J_3^7 \sqrt(p/p_0)
 \end{equation}
