--- a/test.tex
+++ b/test.tex
@@ -952,11 +952,11 @@ O_M \approx d_e J_3^7 \sqrt(p/p_0)
 
 
 \subsection {The heavy leptons fine-tuning}
-The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulant matrix \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It can be wrote:
+The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulant matrix \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It writes:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in the above study, leading to, (2 ppm, with an additive term at 0.16 ppm):
+This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in the above study, leading to (2 ppm, with an additive term at 0.16 ppm):
 \begin{equation}
 p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e
 \end{equation}
@@ -964,7 +964,7 @@ With the above $\mu$ value, $\tau \approx 3477.441701$, a value which enters, to
 \begin{equation}
 e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2 
 \end{equation}
-resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so proposing a Brout-Englert-Higgs ratio $s \approx 495.88^2$:
+resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$. This gives a central role to the Tifft ratio $F/137$, and so proposing a Brout-Englert-Higgs ratio $s \approx 495.88^2$, corresponding to 125.65 GeV for the mass ratio Brout-Englert-Higgs-Boson/Electron. Also, in the Topological Axis, it corresponds with $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 $$
 \begin{array}{ll}
 %
@@ -975,13 +975,13 @@ $$
 (0.7 ppm, 0.3 \%, 0.1 \%). Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
 $$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$ 
 
- With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5, 17 and 40 ppm):
+ With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(31) (0.5, 17 and 40 ppm):
 \begin{equation}
 r_{e}/\lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{\prime}r_e)^3 \approx (es)^{15}/p^2  
 \end{equation}
-confirming the above BEH ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.(44))
+confirming the above BEH ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.(54)).
 
-The above Koide-Sanchez constant $p_K$ connects also with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
+The Koide-Sanchez constant $p_K$ connects also with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
 
 Moreover $\tau$ correlates with the
@@ -999,7 +999,7 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 \begin{equation}
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
-where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
+
 
 With $\delta_K = p_K^2/a^3 $, and the symmetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
 \begin{equation}
