--- a/test.tex
+++ b/test.tex
@@ -593,7 +593,7 @@ the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbe
 
 \subsection{The Holic Principle and CCO}
 
-The sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius is the Grandcosmosn hologram (section 3). Its HB entropy writes: $\pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 $, i.e. with a wrong geometric coefficient. However, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 0.17$:
+The sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius is the Grandcosmosn hologram (section 3). Its HB entropy writes: $\pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 $, i.e. with a wrong geometric coefficient. However, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 1.17$:
 \begin{equation}
 \pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
 \end{equation}
@@ -612,7 +612,7 @@ The deviation of Eq. (27) is very close to that of Eq.(10), inducing, to 17 ppm 
 showing a holic form, involving the Muon/Electron mass ratio $\mu$ (see section 9.5).
 Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$. Moreover, its fourth root shows the Koide-Sanchez constant $p_K$, characteristic of the two heavy leptons (section 9.5) (17 ppm and 1.8 ppm) :
 \begin{equation}
-r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
+r_e/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
 The above term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm):
 \begin{equation}
@@ -889,7 +889,8 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 \subsection {The Four Forces Connection in ppb Fine-Tuning}
-The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearly that GUT with $1O^{16}$ GeV gauge boson seems confirmed. Moreoverer, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was defined in section 2.4 by the two first terms of the \textit {ppb range holic series}:
+%The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with %propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have %been possible with gravitational force. The Topologocal Axis shows clearly that GUT with $1O^{16}$ GeV gauge %boson seems confirmed. Moreoverer, 
+In section 4.2, it is proven that the CCO oscillation reveals a symmetry between two nowadays inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was defined in section 2.4 by the two first terms of the \textit {ppb range holic series}:
 \begin{equation}
 (H/p)^7 = (H/p_G d_e)^2 \approx (p_{moy}/p_K)^3 \approx (p/p_{00})^{210}
 \end{equation}
@@ -908,6 +909,12 @@ where $\mu$ is the Muon/Electron mass ratio, \textit{inside its 20 ppb indetermi
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation}
+Note that this value $f$ is close (0.06 \%) to the following conjonction (7 ppm):
+\begin{equation}
+(a-2)/16 \approx (a-135)^3
+\end{equation}
+
+
 Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
 development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
@@ -956,15 +963,15 @@ The standard model is unable to explain why there are three famillies of particl
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in the above study, leading to (2 ppm, with an additive term at 0.16 ppm):
+This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in Eq. (31), leading to: (2 ppm), with a role of $a^{\prime} = r_H/\lambdabar_e = aH/p$ (0.16 ppm) :
 \begin{equation}
-p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e
+p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 137a/136(a^{\prime}-1) d_e
 \end{equation}
-With the above $\mu$ value, $\tau \approx 3477.441701$, a value which enters, to 0.7 and -0.8 ppm:
+From the above $\mu$ value, $\tau \approx 3477.441701$, which enters, to 0.7 and -0.8 ppm:
 \begin{equation}
 e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2 
 \end{equation}
-resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$. This gives a central role to the Tifft ratio $F/137$, and so proposing a Brout-Englert-Higgs ratio $s \approx 495.88^2$, corresponding to 125.65 GeV for the mass ratio Brout-Englert-Higgs-Boson/Electron. Also, in the Topological Axis, it corresponds with $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
+resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of Eq. (63): (0.7 ppm, 0.3 \%, 0.1 \%) 
 $$
 \begin{array}{ll}
 %
@@ -972,8 +979,10 @@ $$
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%). Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
-$$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$ 
+This gives a central role to the Tifft ratio $F/137$ (section 4.4), and so proposing a Higgs ratio $s \approx 495.88^2$, corresponding to 125.65 GeV. Also, in the Topological Axis, it corresponds with $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1)..
+Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
+$$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$
+
 
  With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(31) (0.5, 17 and 40 ppm):
 \begin{equation}
