--- a/test.tex
+++ b/test.tex
@@ -879,14 +879,16 @@ The corresponding value of $\pi$ in the last expression shows the fractional ser
 \end{equation}
 This corresponds to the above $G$ value to 10 ppb accuracy.
 Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation involving again 137:
-$$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
-The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. 
+$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$. The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. 
 
-whole powers of $\pi$ appears in the 2 ppm Reilly formula: 
+Whole powers of $\pi$ appears in the even order Riemann series, and in:
+$a \approx 4\pi^{3} + \pi^{2} + \pi $ (Reilly formula 2 ppm), while $a \approx \pi^{9/2}2^{-1/3}$ (8 ppm). 
+
+Most spectacular is, with $P = \lambdabar_e/ l_P$ (0.3 and 0.07 \%):
 \begin{equation}
-a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
+P^3 \approx \pi^{a-2} \approx (2\pi R/\lambdabar_e)(2 \pi l_K/r_e) 
 \end{equation}
-and recall that whole powers of $\pi$ appears also in the even order Riemann series.
+proving definitely the role of the Planck volume and the Kotov length.
 
 \subsection {The Four Forces Connection in ppb Fine-Tuning}
 %The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with %propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have %been possible with gravitational force. The Topologocal Axis shows clearly that GUT with $1O^{16}$ GeV gauge %boson seems confirmed. Moreoverer, 
@@ -943,15 +945,15 @@ confirming the holic attribution (section 6) of power 7 for a field parameter, a
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-This value is confirmed (30 ppb), with the above tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1) (3\%, 1\%, 60 ppb) 
+This value is confirmed by the tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1) (3\%, 1\%, 60 ppb) 
 \begin{equation}
-Q \approx P^e \approx W^{\sqrt a} \approx 48 \sqrt{5/w}~ O_M Z
+Q = R_GC\R \approx P^e \approx W^{\sqrt a} \approx 48 \sqrt{5/w}~ O_M Z
 \end{equation}
-the Z value is also confirmed by its ppb liaison with the Janko pariah group order $J_3 = 50232960 $ \cite{Janko}
+the Z value is also confirmed by its ppb liaison with the Janko pariah group order \cite{Janko} $J_3 = 50232960 $ 
 \begin{equation}
 J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
-There is a liaison between the monster and the $J_3$ orders, while these two groups have no known relations (0.2 ppm):
+From $ J_3 \approx W^2/496$, the Eq (68) induces a liaison between the monster and the $J_3$ orders, while these two groups have no known relations (0.2 ppm):
 \begin{equation}
 O_M \approx d_e J_3^7 \sqrt(p/p_0)
 \end{equation}
@@ -983,12 +985,11 @@ This gives a central role to the Tifft ratio $F/137$ (section 4.4), and so propo
 Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
 $$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$
 
-
- With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(31) (0.5, 17 and 40 ppm):
+The Eq. (31) (0.5, 17 ppm) has an extension (40 ppm):
 \begin{equation}
 r_{e}/\lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{\prime}r_e)^3 \approx (es)^{15}/p^2  
 \end{equation}
-confirming the above BEH ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.(54)).
+confirming the above Higgs ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.(54)).
 
 The Koide-Sanchez constant $p_K$ connects also with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
