--- a/test.tex
+++ b/test.tex
@@ -947,7 +947,7 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
 This value is confirmed by the tachyonic ratio $Q$ and the Planck Wien term $5/w$ (section 7.1) (3\%, 1\%, 60 ppb) 
 \begin{equation}
-Q = R_GC\R \approx P^e \approx W^{\sqrt a} \approx 48 \sqrt{5/w}~ O_M Z
+Q = R_GC/R \approx P^e \approx W^{\sqrt a} \approx 48 \sqrt{5/w}~ O_M Z
 \end{equation}
 the Z value is also confirmed by its ppb liaison with the Janko pariah group order \cite{Janko} $J_3 = 50232960 $ 
 \begin{equation}
