--- a/test.tex
+++ b/test.tex
@@ -879,12 +879,8 @@ The corresponding value of $\pi$ in the last expression shows the fractional ser
 \end{equation}
 This corresponds to the above $G$ value to 10 ppb accuracy.
 Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation involving again 137:
-$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$. The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. 
-
-Whole powers of $\pi$ appears in the even order Riemann series, and in:
-$a \approx 4\pi^{3} + \pi^{2} + \pi $ (Reilly formula 2 ppm), while $a \approx \pi^{9/2}2^{-1/3}$ (8 ppm). 
-
-Most spectacular is, with $P = \lambdabar_e/ l_P$ (0.3 and 0.07 \%):
+$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$. The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. Whole powers of $\pi$ appears in the even order Riemann series, and in:
+$a \approx 4\pi^{3} + \pi^{2} + \pi $ (Reilly formula 2 ppm), while $a \approx \pi^{9/2}2^{-1/3}$ (8 ppm). Moreover, with $P = \lambdabar_e/ l_P$ (0.3 and 0.07 \%):
 \begin{equation}
 P^3 \approx \pi^{a-2} \approx (2\pi R/\lambdabar_e)(2 \pi l_K/r_e) 
 \end{equation}
