--- a/test.tex
+++ b/test.tex
@@ -307,8 +307,8 @@ with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$
 R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly
 $$
-very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 9.2):
-$R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$. Moreover, there is a direct connection with the Grandcosmos radius and the topon, to 0.90 \%: $R_1^3/R_{GC}^2 \approx \lambdabar_M$. The analysis of deviation leads to (0.3 ppm):
+very close (0.4 ppm) to $R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}$, where $p_{G} = P/2^{127/2}$, with $P = \lambdabar_e / l_P$, $\beta = (H - p)^{-1}$ is the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 9.2):
+. Moreover, there is a direct connection with the Grandcosmos radius and the topon, to 0.90 \%: $R_1^3/R_{GC}^2 \approx \lambdabar_M$. The analysis of deviation leads to (0.3 ppm):
 \begin{equation}
 nP \approx (aa^{\prime})^2 (FR_1/R^{\prime})^3
 \end{equation}
