--- a/test.tex
+++ b/test.tex
@@ -817,10 +817,13 @@ $$
 \displaystyle
 e^{e^e}\approx (lnp)^{lnp}  
 \approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 \approx j^6/F \\
-\approx FlnD/ln(2\pi) \approx FlnF/2 \approx 2WlnZ \approx Zln(\lambdabar_{CMB}/\lambdabar_e) 
+\approx FlnD/ln(2\pi) \approx FlnF/2 \approx 2WlnZ \approx Zln(\lambdabar_{CMB}/\lambdabar_e)\\
 \end{array}
-$$
-Note that $e^2$ is the limit of the following musical series:
+$$, and, to 8 ppm and 0.2 ppm:
+\begin{equation}
+e^{e^e}/(a-1)^2 \approx 4 ln P \approx a ln(9/2)
+\end{equation}
+showing the role of bases 2 and 3. Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
 a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
 
@@ -828,8 +831,7 @@ The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Full Hologr
 \begin{equation}
 R_{GC}/\lambdabar_M  \approx (137e/a)^{420}  
 \end{equation}
-exhibiting the following property (0.3 ppm):
- $$ (a/137)^{420} \approx (137 - 3)/120 $$  
+exhibiting (0.3 ppm):$ (a/137)^{420} \approx (137 - 3)/120 $  
 with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, 
 
 \subsection {The Lenz-Wyler's Formula}
