--- a/test.tex
+++ b/test.tex
@@ -819,11 +819,11 @@ e^{e^e}\approx (lnp)^{lnp}
 \approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 \approx j^6/F \\
 \approx FlnD/ln(2\pi) \approx FlnF/2 \approx 2WlnZ \approx Zln(\lambdabar_{CMB}/\lambdabar_e)\\
 \end{array}
-$$, and, to 8 ppm and 0.2 ppm:
+$$ and, with $a_1 = a-1$ to 8 ppm, 0.2 ppm, 0.05 \% and 0.03 \%:
 \begin{equation}
-e^{e^e}/(a-1)^2 \approx 4 ln P \approx a ln(9/2)
+e^{e^e}/a_1^2 \approx 4 ln P \approx a ln(9/2) \approx 5^{2^7} \approx (WZ)^{\beta a^2/16 \times 137} 
 \end{equation}
-showing the role of bases 2 and 3. Note that $e^2$ is the limit of the following musical series:
+showing the role of musical bases 2, 3 and 5. Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
 a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
 
@@ -831,8 +831,8 @@ The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Full Hologr
 \begin{equation}
 R_{GC}/\lambdabar_M  \approx (137e/a)^{420}  
 \end{equation}
-exhibiting (0.3 ppm):$ (a/137)^{420} \approx (137 - 3)/120 $  
-with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, 
+exhibiting (0.3 ppm): $ (a/137)^{420} \approx (137 - 3)/120 $  
+with $137 - 3 = 7 + 127$ showing the Combinatorial Hierarchy terms \cite{Sanchez1} 
 
 \subsection {The Lenz-Wyler's Formula}
 Armand Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence
