--- a/test.tex
+++ b/test.tex
@@ -538,16 +538,16 @@ with the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-
 \section{The special holographic relations}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-The holographic technique, based on the properties of a coherent wave is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been confirmed (section 4.2).
+The holographic technique, based on the properties of a coherent wave is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2).
 
-The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photosensible area of $0.6 m^2$. The argentic emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^15$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge) \cite{Sanchez4}. In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexaminre the foundation of cosmology. In the three minutes, the half-radius of visible Universe was oàbtained. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university, this was put in March 1998 in a closed draft in the Acad\'{e}emie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
+The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photosensible area of $0.6 m^2$. The argentic emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexamine the foundation of cosmology. \textit{In the three first minutes, the half-radius of visible Universe was obtained}. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university, this was put in March 1998 in a closed draft in the Acad\'{e}mie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
 
-Strangely enough, at the very epoch when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal holography was proposed in the author's thesis as soon as 1975. Moreover, the standard Holographic Principle is limited to using the Plank area. Thus, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more examples. 
+Strangely enough, at the very epoch when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal holography was proposed in the first author's thesis as soon as 1975. Moreover, the standard Holographic Principle is limited to using the Plank area. Thus, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
 
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
-relation with the CMB Wien wavelength $l_{CMB} = hc/kTw $, with $w = 5 (1-e^{-g}) \approx 4.965114245)$ to $0.01\%$:
+relation with the CMB Wien wavelength $l_{CMB} = hc/kTw $, with $w = 5 (1-e^{-w}) \approx 4.965114245)$ to $0.01\%$:
 \begin{equation}
 4\pi(R^{\prime}/l_{CMB})^{2} \approx e^{a}
 \end{equation}
@@ -571,7 +571,7 @@ confirming the invariance of the cosmic temperature.
 
 \subsection{The Cosmic Temperature}
 
-In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
+In the gravitational hydrogen molecule model \cite{Sanchez1}, $R$ is defined by the following 1D-2D Special
 Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the logical extension, the 3D term involving the molecular Hydrogen wavelength:
 \begin{equation}
 2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
@@ -581,7 +581,7 @@ background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p
 This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
 which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 9.2). Recall
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p_0 = 6\pi^{5}$, (see Section 9.2). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
