--- a/test.tex
+++ b/test.tex
@@ -540,9 +540,9 @@ with the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-
 
 The holographic technique, based on the properties of a coherent wave is by far the most efficient way to treat huge information, in particular in optics \cite{Grosmann}. Now, the main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations and CCO study, the masses of the photon and graviton has been proposed (section 4.2).
 
-The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photosensible area of $0.6 m^2$. The argentic emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexamine the foundation of cosmology. \textit{In the three first minutes, the half-radius of visible Universe was obtained}. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university, this was put in March 1998 in a closed draft in the Acad\'{e}mie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
+The students of the first author realized in 1987 a hologram by scanning a 1 mW security power laser beam upon a photosensible area of $0.6 m^2$. The argentic emulsion depth 10 microns permitted false color to be obtained by varying illumination through a photo-mask, and use of a shrinkable emulsion chemical process. The information contained in this hologram reached $10^{15}$ bit, obtained in 12 minutes of scanning exposition. Then, the first author claimed \textit{'such an efficient way of dealing information must be used by Nature'}. Turning to the impressive data of Particle Physics, after an intensive study, holographic relations were indeed found, and its arithmetical form, the Holic Principle was presented at ANPA 16 (Cambridge, 1994) \cite{Sanchez4}. In Sept. 1997, the Orsay University attributes a sabbatical year, giving time to reexamine the foundation of cosmology. \textit{In the three first minutes, the half-radius of visible Universe was obtained}. After several weeks, the scanning holography of section 3 was established. After rejection by the Orsay university and Paris Academy, this was put in March 1998 in a closed draft in the Acad\'{e}mie des Sciences de Paris, under the title \textit{ 'L'Univers conserve-t-il l-information ?'}.
 
-Strangely enough, at the very epoch when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal holography was proposed in the first author's thesis as soon as 1975. Moreover, the standard Holographic Principle is limited to using the Plank area. Thus, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
+Strangely enough, when the first author's publication was blocked (1993-1995), a Holographic Principle was coined by some theoreticians \cite{Bousso}, which were not specialists in this domain. The origin of this appellation is not clear. One may think that the name comes from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D. The idea of temporal 1D holography was proposed in the first author's thesis as soon as 1975. Moreover, the standard Holographic Principle is limited to using the Plank area. However, it is natural to suppose that they are other holographic wavelengths. In fact, \textit{the Topological Axis is the reunion of eight 1D-2D holographic relations}. We present here three more confirmations. 
 
 \subsection{The Conservation of Information}
 
@@ -599,12 +599,12 @@ which is a holographic conservation concerning \textit{the half-sphere of the vi
 (4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
 \end{equation}
 
-The deviation of Eq. (27) is very close to that of Eq.(10), inducing, to 17 ppm and 13 ppm: 
+The deviation of Eq. (27) is very close to that of the relation $R_1^3 \approx R_{GC}^2 \lambdabar_M$ inducing, to 17 ppm (identified in Eq. (10) as $np^2/H^2\sqrt{pH}$ to 0.3 ppm) and 13 ppm: 
 \begin{equation}
  (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
 showing a holic form, involving the Muon/Electron mass ratio $\mu$ (see section 9.5).
-Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$. Moreover, its fourth root shows the Koide-Sanchez constant $p_K$, characteristic of the two heavy leptons (section 9.5) (17 ppm and 1.8 ppm) :
+Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a reduction in the ratio $\delta^3$. Moreover, its fourth root shows the Koide-Sanchez constant $p_K$, characteristic of the two heavy leptons (section 9.5) (above 17 ppm and 1.8 ppm) :
 \begin{equation}
 r_e/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
@@ -615,11 +615,10 @@ O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \begin{equation}
  (F^3R_1 / 2 a^3R^{\prime})^2 \approx Z^4 (a/137)(p_0/p)^2
 \end{equation}
-Thus, (0.3 and -0.4 ppm)
+Thus, (0.3 and -0.4 ppm), precising the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle Theory
 \begin{equation}
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
-\end{equation}
-this precises a known relation (0.1 \%) in Particle Theory: $a_w/WZ \approx \sqrt{a}$.   
+\end{equation}   
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The role of Intermediary Mathematical Constants}
