--- a/test.tex
+++ b/test.tex
@@ -615,7 +615,7 @@ O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \begin{equation}
  (F^3R_1 / 2 a^3R^{\prime})^2 \approx Z^4 (a/137)(p_0/p)^2
 \end{equation}
-Thus, (0.3 and -0.4 ppm), precising the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle Theory
+Thus, precising the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particle Theory (0.3 and -0.4 ppm)
 \begin{equation}
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}   
@@ -1164,7 +1164,7 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}.
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{Predictions}\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
+It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Computational Science and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 
       This article leads to many predictions, in particular:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
